; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_main.c_model_suspend.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_main.c_model_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_model = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32, i64 }
%struct.bt_mesh_elem = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bt_mesh_model*, %struct.bt_mesh_elem*, i32, i32, i8*)* @model_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @model_suspend(%struct.bt_mesh_model* %0, %struct.bt_mesh_elem* %1, i32 %2, i32 %3, i8* %4) #0 {
  %6 = alloca %struct.bt_mesh_model*, align 8
  %7 = alloca %struct.bt_mesh_elem*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store %struct.bt_mesh_model* %0, %struct.bt_mesh_model** %6, align 8
  store %struct.bt_mesh_elem* %1, %struct.bt_mesh_elem** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %11 = load %struct.bt_mesh_model*, %struct.bt_mesh_model** %6, align 8
  %12 = getelementptr inbounds %struct.bt_mesh_model, %struct.bt_mesh_model* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = icmp ne %struct.TYPE_2__* %13, null
  br i1 %14, label %15, label %32

15:                                               ; preds = %5
  %16 = load %struct.bt_mesh_model*, %struct.bt_mesh_model** %6, align 8
  %17 = getelementptr inbounds %struct.bt_mesh_model, %struct.bt_mesh_model* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 2
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %32

22:                                               ; preds = %15
  %23 = load %struct.bt_mesh_model*, %struct.bt_mesh_model** %6, align 8
  %24 = getelementptr inbounds %struct.bt_mesh_model, %struct.bt_mesh_model* %23, i32 0, i32 0
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  store i32 0, i32* %26, align 8
  %27 = load %struct.bt_mesh_model*, %struct.bt_mesh_model** %6, align 8
  %28 = getelementptr inbounds %struct.bt_mesh_model, %struct.bt_mesh_model* %27, i32 0, i32 0
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 1
  %31 = call i32 @k_delayed_work_cancel(i32* %30)
  br label %32

32:                                               ; preds = %22, %15, %5
  ret void
}

declare dso_local i32 @k_delayed_work_cancel(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
